--- a/views/index.erb
+++ b/views/index.erb
@@ -1,22 +1,6 @@
-<html>
-  <head>
-    <title>Backbone Boilerplate</title>
-    <link rel="stylesheet" href="/style/main.css">
 
-<!-- JQuery Link -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
 
-<!-- Underscore Link -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-
-<!-- Backbone Link -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
-
-<!-- Our Javascript Link -->
-    <script type="text/javascript" src = "/scripts/app.js"></script>
-
-  </head>
-  <body>
-
-  </body>
-</html>
+<div class="tweleve columns" id="window">
+  <h2>This will be Where the D3 EQ visualizer will display</h2>
+</div>
+  <%= erb :partials %>
