adds scripts lib directory and script files

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,10 +4,14 @@
     <link rel="stylesheet" href="/styles/nomalize.css">
     <link rel="stylesheet" href="/styles/skeleton.css">
     <link rel="stylesheet" href="/styles/main.css">
-    <script type="text/javascript" src="/scripts/jquery.js"></script>
-    <script type="text/javascript" src="/scripts/underscore.js"></script>
-    <script type="text/javascript" src="/scripts/backbone.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
+
+    <script type="text/javascript" src="/scripts/lib/jquery.js"></script>
+    <script type="text/javascript" src="/scripts/lib/underscore.js"></script>
+    <script type="text/javascript" src="/scripts/lib/backbone.js"></script>
+    <script type="text/javascript" src="/scripts/lib/d3-min.js"></script>
+    <script type="text/javascript" src="/scripts/lib/d3.js"></script>
+    
   </head>
 
   <body>
@@ -25,5 +29,5 @@
 
 		</div>
   </body>
-  
+
 </html>
