--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>VisualizeIt</title>
-    <link rel="stylesheet" href="/styles/nomalize.css">
+    <link rel="stylesheet" href="/styles/normalize.css">
     <link rel="stylesheet" href="/styles/skeleton.css">
     <link rel="stylesheet" href="/styles/main.css">
     <script type="text/javascript" src="/scripts/app.js"></script>
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="/scripts/lib/backbone.js"></script>
     <script type="text/javascript" src="/scripts/lib/d3-min.js"></script>
     <script type="text/javascript" src="/scripts/lib/d3.js"></script>
-    
+
   </head>
 
   <body>
