adds controllers, migrations, layout tweeks

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,7 @@
         <button type="button" name="two">Log Out</button>
       </p>
 
-			<h1>Visualize</h1>
+			<div class="three columns">Visualize</div>
 
         <%= yield %>
 
