--- a/views/partials.erb
+++ b/views/partials.erb
@@ -1,10 +1,11 @@
 
-<h3>Display current selections</h3>
+<div class="five columns">
+	<p>Display current selections</p>
+</div>
 
 <div class="options ten columns">
 	<h4>User/Guest Preferences</h4>
 	<input type="button" name="userPref" value="Saved Pref">
 	<input type="button" name="visual" value="Select Visualization">
 	<input type="text" name="AudioUrl" value="Add audio URL">
-
 </div>
