--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,9 +6,9 @@ body{
 	overflow: auto;
 	/*border: 2px dashed white;*/
 	height: 60%;
-	-webkit-box-shadow: -2px 0px 245px 47px rgba(0,0,0,1);
+	/*-webkit-box-shadow: -2px 0px 245px 47px rgba(0,0,0,1);
 -moz-box-shadow: -2px 0px 245px 47px rgba(0,0,0,1);
-box-shadow: -2px 0px 245px 47px rgba(0,0,0,1);
+box-shadow: -2px 0px 245px 47px rgba(0,0,0,1);*/
 }
 .options{
 	position: relative;
