adds forms for logging in

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,9 +18,9 @@
 		<div class="container">
 
       <p class="nav">
-        <button type="button" name="three">SignUp</button>
-        <button type="button" name="two">Log In</button>
-        <button type="button" name="two">Log Out</button>
+        <button type="button" class="three">SignUp</button>
+        <button type="button" class="two">Log In</button>
+        <button type="button" class="two">Log Out</button>
       </p>
 
 			<div class="three columns">Visualize</div>
