--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,22 +3,28 @@ body{
 
 }
 #window{
-	overflow: auto;
+
 	/*border: 2px dashed white;*/
 	height: 60%;
 	/*-webkit-box-shadow: -2px 0px 245px 47px rgba(0,0,0,1);
 -moz-box-shadow: -2px 0px 245px 47px rgba(0,0,0,1);
 box-shadow: -2px 0px 245px 47px rgba(0,0,0,1);*/
 }
+#signUpForm{
+	display: none;
+}
 .options{
 	position: relative;
 	border: 2px dashed white;
+}
+.guestnav{
+	display: flex;
 }
 .nav{
 	float:right;
 }
 svg{
 	background-color: black;
+	overflow: hidden;
 	/*border: 2px dashed white;*/
-
 }
