--- a/views/login.erb
+++ b/views/login.erb
@@ -1,6 +1,6 @@
 
 
-<div class="login_form row">
+<div class="login_form sixteen columns">
 	<h2>Log In</h2>
 		<form action= "/sessions" method='post'>
 			<input type="text" name="username" placeholder="Username">
