--- a/views/partials.erb
+++ b/views/partials.erb
@@ -1,11 +1,7 @@
 
-<div class="five columns">
-	<p>Display current selections</p>
-</div>
-
-<div class="options ten columns">
+<div class="options row ten columns">
 	<h4>User/Guest Preferences</h4>
-	<input type="button" name="userPref" value="Saved Pref">
-	<input type="button" name="visual" value="Select Visualization">
+	<button type="button" name="userPref">Saved Pref</button>
+	<button type="button" name="visual"> Select Visualization"</button>
 	<input type="text" name="AudioUrl" value="Add audio URL">
 </div>
