--- a/views/partials.erb
+++ b/views/partials.erb
@@ -5,3 +5,7 @@
 	<button type="button" name="visual"> Select Visualization"</button>
 	<input type="text" name="AudioUrl" value="Add audio URL">
 </div>
+<div class="row container">
+
+
+</div>
