--- a/views/visualization_master.erb
+++ b/views/visualization_master.erb
@@ -1,3 +1,8 @@
-<h3>I am the master</h3>
 
-<%= erb :visualization_one %>
+<div class="row container">
+
+	<h3>I am the master</h3>
+
+	<%= erb :visualization_one %>
+
+</div>
