--- a/views/partials.erb
+++ b/views/partials.erb
@@ -1,11 +1,21 @@
 
-<div class="options row ten columns">
-	<h4>User/Guest Preferences</h4>
+<div class="options row u-full-width">
+
+	<ul id="userOptions">
+		<li> <a href="#">Visualisers</a></li>
+			<ul id="subVisualizers">
+				<li> <a href="#">Visualiser One</a></li>
+				<li> <a href="#">Visualisers Two</a></li>
+				<li> <a href="#">Visualisers Three</a></li>
+			</ul>
+	</ul>
+
+</div>
+
+
+
+<!-- <div class="options row u-full-width">
 	<button type="button" name="userPref">Saved Pref</button>
 	<button type="button" name="visual"> Select Visualization"</button>
 	<input type="text" name="AudioUrl" value="Add audio URL">
-</div>
-<div class="row container">
-
-
-</div>
+</div> -->
