--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,44 +18,41 @@
 
   <body>
 
-    <div class="container skeleton">
-      <article class="one column ">One</article>
-      <article class="one column ">Two</article>
-      <article class="one column ">Three</article>
-      <article class="one column ">Four</article>
-      <article class="one column ">Five</article>
-      <article class="one column ">Six</article>
-      <article class="one column ">Seven</article>
-      <article class="one column ">Eight</article>
-      <article class="one column ">Nine</article>
-      <article class="one column ">Ten</article>
-      <article class="one column ">Eleven</article>
-      <article class="one column ">Twelve</article>
-    </div>
-
-    <div class="container">
-      <div class="row nav">
-        <% if current_user %>
-        <form action="/sessions" method='post'>
-          <input type="hidden" name='_method' value='delete'>
-          <input type="submit" value='Log-Off'>
-        </form>
-        <% else %>
-        <div class="row guestnav">
-          <form class="new" action="/log_in" method="get">
-            <button type="submit" id="signin">Log In</button>
-          </form>
-          <form class="new five columns" action="/sign_up" method="get">
-            <button type="submit" id="signup">Sign Up</button>
-          </form>
-        </div>
-        <% end %>
-      </div>
-      <div class="eight columns ">
+    <nav class="navbar container u-full-width">
+      <div class="four columns ">
         <h1 class="brand-logo"><p>Visualize</p><p class="it">It</p></h1>
       </div>
+      <div class="row collapse navbar-collapse">
+        <% if current_user %>
+        <div class="usernav">
+          <form action="/sessions" method='post'>
+            <input type="hidden" name='_method' value='delete'>
+            <input type="submit" value='Log-Off'>
+          </form>
+        </div>
+        <% else %>
+
+        <div class="row ">
+          <div class="row guestnav">
+            <p class="question u-full-width">Want more? Log In/Sign up for more cool views!</p>
+
+          <form class="one-half" action="/log_in" method="get">
+            <button type="submit" id="signin">Log In </button>
+          </form>
+          <form class="one-half" action="/sign_up" method="get">
+            <button type="submit" id="signup">Sign Up</button>
+          </form>
+          </div>
+        </div>
+
+        <% end %>
+      </div>
+    </nav>
+
+    <div class="container">
         <%= yield %>
 		</div>
+
   </body>
 
 </html>
