--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,32 +18,31 @@
 
   <body>
 
-    <nav class="navbar container u-full-width">
-      <div class="four columns ">
+    <nav class="row navbar container u-full-width">
+      <div class="one-half column">
         <h1 class="brand-logo"><p>Visualize</p><p class="it">It</p></h1>
       </div>
-      <div class="row collapse navbar-collapse">
+      <div class="row one-half column mainNav">
         <% if current_user %>
-        <div class="usernav">
-          <form action="/sessions" method='post'>
+        <div class="three columns usernav">
+          <form class="logoutForm"action="/sessions" method='post'>
             <input type="hidden" name='_method' value='delete'>
             <input type="submit" value='Log-Off'>
           </form>
         </div>
         <% else %>
+          <div class="two-thirds column guestnav ">
 
-        <div class="row ">
-          <div class="row guestnav">
-            <p class="question u-full-width">Want more? Log In/Sign up for more cool views!</p>
-
-          <form class="one-half" action="/log_in" method="get">
-            <button type="submit" id="signin">Log In </button>
-          </form>
-          <form class="one-half" action="/sign_up" method="get">
-            <button type="submit" id="signup">Sign Up</button>
-          </form>
+            <div class="u-full-width guestbtn">
+              <form class="one-half column navbutton" action="/log_in" method="get">
+                <button type="submit" onclick="LoginForm()"id="signin">Log In </button>
+              </form>
+              <form class="one-half column navbutton" action="/sign_up" method="get">
+                <button type="submit" class="" id="signup">Sign Up</button>
+              </form>
+            </div>
+            <p class="question two-thirds column">Log In/Sign up for more cool views!</p>
           </div>
-        </div>
 
         <% end %>
       </div>
