--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -1,6 +1,6 @@
 
-		<form action= "/users" method='post'>
+		<form class="form" action= "/users" method='post'>
 			<input type="text" name="user[username]" placeholder="Username">
 			<input type="password" name="password" placeholder="Password">
-			<input type="Submit" value="Sign-Up">
+			<button type="Submit" value="Sign-Up">Sign Up</button>
 		</form>
