--- a/views/login.erb
+++ b/views/login.erb
@@ -1,10 +1,6 @@
 
-
-<div class="login_form sixteen columns">
-	<h2>Log In</h2>
 		<form action= "/sessions" method='post'>
 			<input type="text" name="username" placeholder="Username">
 			<input type="password" name="password" placeholder="Password">
-			<input type="Submit" value="Sign-In">
+			<button type="Submit" value="Sign-In">Sign In</button>
 		</form>
-</div>
