--- a/views/partials.erb
+++ b/views/partials.erb
@@ -1,17 +1,14 @@
 
-<div class="options row u-full-width">
-
-	<ul id="userOptions">
-		<li> <a href="#">Visualisers</a></li>
-			<ul id="subVisualizers">
-				<li> <a href="#">Visualiser One</a></li>
-				<li> <a href="#">Visualisers Two</a></li>
-				<li> <a href="#">Visualisers Three</a></li>
-			</ul>
-	</ul>
-
-</div>
-
+	<form class="logoutForm"action="/sessions" method='post'>
+		<input type="hidden" name='_method' value='delete'>
+		<button type="submit" value='Log-Off'>Sign Out</button>
+	</form>
+<form action="Visuals(this.value)">
+		<select class "four columns" type="button" id="dropdown">
+			<option value=VisualOne(data);>Visual 1</option>
+			<option value=VisualTwo(data);>Visual 2</option>
+		</select>
+</form>
 
 
 <!-- <div class="options row u-full-width">
