--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,9 +4,7 @@
     <link rel="stylesheet" href="/stylesheets/normalize.css">
     <link rel="stylesheet" href="/stylesheets/skeleton.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:100' rel='stylesheet' type='text/css'>
-
     <link rel="stylesheet" href="/stylesheets/main.css">
-
 
     <script type="text/javascript" src="/scripts/lib/jquery.js"></script>
     <script type="text/javascript" src="/scripts/lib/underscore.js"></script>
@@ -15,22 +13,21 @@
     <script type="text/javascript" src="/scripts/lib/d3.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
   </head>
-
   <body>
-
     <nav class="row navbar container u-full-width">
       <div class="one-half column">
+        <% if current_user %>
+        <h1 class="brand-logo"><p class="logo">Visualize</p><p class="logo" id="it">It</p></h1>
+        <% else %>
         <h1 class="brand-logo"><p class="logo">Visualize</p><p class="logo" id="it">It</p></h1>
         <p class="question seven columns">Log In/Sign up for more cool views!</p>
+        <% end %>
       </div>
 
       <div class="row one-half column mainNav">
         <% if current_user %>
-        <div class="usernav">
-          <form class="logoutForm"action="/sessions" method='post'>
-            <input type="hidden" name='_method' value='delete'>
-            <button type="submit" value='Log-Off'>Sign Out</button>
-          </form>
+        <div class="usernav u-full-width">
+          <%= erb :partials %>
         </div>
         <% else %>
           <div class="u-full-width" id="guestbtn">
@@ -48,7 +45,7 @@
     </nav>
 
     <div class="container">
-        <%= yield %>
+
 		</div>
 
   </body>
