adds second visualizer

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -43,8 +43,7 @@
         <% end %>
       </div>
     </nav>
-
-    <div class="container">
+    <div class=" row eleven columns offset-by-half" id="divsvg">
 
 		</div>
 
