--- a/views/partials.erb
+++ b/views/partials.erb
@@ -3,11 +3,14 @@
 		<input type="hidden" name='_method' value='delete'>
 		<button type="submit" value='Log-Off'>Sign Out</button>
 	</form>
-<form action="Visuals(this.value)">
-		<select class "four columns" type="button" id="dropdown">
-			<option value=VisualOne(data);>Visual 1</option>
-			<option value=VisualTwo(data);>Visual 2</option>
+<form>
+		<select class "four columns" type="button" id="dropdown" >
+			<option value= '' >New Visual</option>
+			<option value= 1 >Visual 1</option>
+			<option value= 2 >Visual 2</option>
 		</select>
+		<button type="button" id="newVisual">New Visual</button>
+		<!-- <noscript><input type="submit" value="Submit"></noscript> -->
 </form>
 
 
