--- a/views/partials.erb
+++ b/views/partials.erb
@@ -5,12 +5,11 @@
 	</form>
 <form>
 		<select class "four columns" type="button" id="dropdown" >
-			<option value= '' >New Visual</option>
+			<option value= '' >Select Visual</option>
 			<option value= 1 >Visual 1</option>
 			<option value= 2 >Visual 2</option>
 		</select>
-		<button type="button" id="newVisual">New Visual</button>
-		<!-- <noscript><input type="submit" value="Submit"></noscript> -->
+		<button type="button" id="newVisual">Start VisualizeIt</button>
 </form>
 
 
