--- a/views/partials.erb
+++ b/views/partials.erb
@@ -9,7 +9,7 @@
 			<option value= 1 >Visual 1</option>
 			<option value= 2 >Visual 2</option>
 		</select>
-		<button type="button" id="newVisual">Start VisualizeIt</button>
+		<button type="button" id="newVisual">Visualize</button>
 </form>
 
 
