--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -117,8 +117,17 @@ svg{
 	position: relative;
 	display: inline;
 	float: right;
-	margin-right: 1.5em;
+	margin: 0 auto;
 	background-color: inherit;
 	border-color: #1E666C;
 	font-family: 'Lato', sans-serif;
+}
+#newVisual{
+	float: right;
+	margin-right: 1.5em;
+
+}
+#divsvg:-webkit-full-screen {
+  width: 100%;
+  height: 100%;
 }
