--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/stylesheets/main.css">
 
     <script type="text/javascript" src="/scripts/lib/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script type="text/javascript" src="/scripts/lib/underscore.js"></script>
     <script type="text/javascript" src="/scripts/lib/backbone.js"></script>
     <script type="text/javascript" src="/scripts/lib/d3-min.js"></script>
