--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script type="text/javascript" src="/scripts/lib/underscore.js"></script>
     <script type="text/javascript" src="/scripts/lib/backbone.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="/scripts/lib/d3-min.js"></script>
     <script type="text/javascript" src="/scripts/lib/d3.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
